--- a/Resources/view/admin/card/index/template.html.twig
+++ b/Resources/view/admin/card/index/template.html.twig
@@ -13,7 +13,7 @@
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
 	<link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
-	<link href="/assets/css/print.min.css" rel="stylesheet" type="text/css">
+	<link data-href="/assets/css/print.min.css" rel="stylesheet" class="lazy" type="text/css">
 {% endblock %}
 
 
@@ -27,11 +27,6 @@
 {% block javascript %}
 
 <script nonce='{{ csp_nonce() }}' async  data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}' class='lazy'></script>
-
-<script nonce="{{ csp_nonce() }}">
-document.addEventListener("DOMContentLoaded", (event) => {
-	const form = document.forms.product_filter_form;
-	form.addEventListener('change', () => { setTimeout(() => { form.submit(); }, 300); });
-});
-</script>
+<script nonce='{{ csp_nonce() }}' async data-src="/assets/products_product/filter.min.js?v={{ version }}" class="lazy"></script>
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/js/radio.input.min.js?v={{ version }}' class='lazy'></script>
 {% endblock %}
