--- a/Resources/view/admin/card/update/pc/content.html.twig
+++ b/Resources/view/admin/card/update/pc/content.html.twig
@@ -23,8 +23,10 @@
             <br>
 
             <p>
-                Карточка будет удалена и создана заново. Все заказы, добавленные до обновления карточки будут отображаться по старым
-                данным, новые заказы будут добавляться и отображаться с новыми! Обновление карточки происходит не сразу, и требует некоторого времени.
+                Карточка будет удалена и создана заново. Все заказы, добавленные до обновления карточки будут
+                отображаться по старым
+                данным, новые заказы будут добавляться и отображаться с новыми! Обновление карточки происходит не сразу,
+                и требует некоторого времени.
             </p>
             <p>
                 {{ 'txt.default.update'|trans({}, 'core.modal') }}
