--- a/Resources/view/admin/settings/index/template.html.twig
+++ b/Resources/view/admin/settings/index/template.html.twig
@@ -7,22 +7,23 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block title %}
-	{{ 'page.index'|trans }}
+    {{ 'page.index'|trans }}
 {% endblock %}
 
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-	<link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
 {% endblock %}
 
 
 {# ---- КОНТЕНТ-БЛОК ------------------------------------------------------------ #}
 {% block content %}
 
-	{{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
+    {{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
 {% endblock %}
 
 {% block javascript %}
-<script nonce='{{ csp_nonce() }}' async  data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}' class='lazy'></script>
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+            class='lazy'></script>
 {% endblock %}
