--- a/Resources/view/admin/settings/newedit/edit/template.html.twig
+++ b/Resources/view/admin/settings/newedit/edit/template.html.twig
@@ -4,28 +4,32 @@
 {% extends Template('/admin/base.html.twig') %}
 
 {% block title %}
-	{# Редактировать продукцию #}
-	{{ 'page.edit'|trans }}
+    {# Редактировать продукцию #}
+    {{ 'page.edit'|trans }}
 {% endblock %}
 
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-	<link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
 {% endblock %}
 
 
 {# ---- КОНТЕНТ-БЛОК ------------------------------------------------------------ #}
 {% block content %}
-	
-	{{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
+
+    {{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
 {% endblock %}
 
 {% block javascript %}
 
-<script nonce='{{ csp_nonce() }}' async  data-src='/assets/js/image.input.min.js?v={{ version }}' class='lazy'></script>
-<script nonce='{{ csp_nonce() }}' async  data-src="/assets/js/radio.input.min.js?v={{ version }}" class="lazy"></script>
-<script nonce='{{ csp_nonce() }}' async  data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}' class='lazy'></script>
-<script nonce='{{ csp_nonce() }}' async  data-src="/assets/payment/payment.min.js?v={{ version }}" class='lazy'></script>
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/js/image.input.min.js?v={{ version }}'
+            class='lazy'></script>
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/js/radio.input.min.js?v={{ version }}"
+            class="lazy"></script>
+    <script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+            class='lazy'></script>
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/payment/payment.min.js?v={{ version }}"
+            class='lazy'></script>
 
 {% endblock %}
