--- a/Resources/view/admin/card/index/template.html.twig
+++ b/Resources/view/admin/card/index/template.html.twig
@@ -4,7 +4,7 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block title %}
-	{{ 'page.index'|trans }}
+    {{ 'page.index'|trans }}
 {% endblock %}
 
 {# ---- ШАБЛОН ------------------------------------------------------------ #}
@@ -12,8 +12,8 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-	<link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
-	<link data-href="/assets/css/print.min.css" rel="stylesheet" class="lazy" type="text/css">
+    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link data-href="/assets/css/print.min.css" rel="stylesheet" class="lazy" type="text/css">
 {% endblock %}
 
 
@@ -21,12 +21,15 @@
 
 {# ---- КОНТЕНТ-БЛОК ------------------------------------------------------------ #}
 {% block content %}
-	{{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
+    {{ include(_self|replace({ "template.html.twig": baks_settings.device~"/content.html.twig" })) }}
 {% endblock %}
 
 {% block javascript %}
 
-<script nonce='{{ csp_nonce() }}' async  data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}' class='lazy'></script>
-<script nonce='{{ csp_nonce() }}' async data-src="/assets/products_product/filter.min.js?v={{ version }}" class="lazy"></script>
-<script nonce='{{ csp_nonce() }}' async data-src='/assets/js/radio.input.min.js?v={{ version }}' class='lazy'></script>
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+            class='lazy'></script>
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/products_product/filter.min.js?v={{ version }}"
+            class="lazy"></script>
+    <script nonce='{{ csp_nonce() }}' async data-src='/assets/js/radio.input.min.js?v={{ version }}'
+            class='lazy'></script>
 {% endblock %}
