--- a/Resources/view/admin/products/index/pc/content.html.twig
+++ b/Resources/view/admin/products/index/pc/content.html.twig
@@ -1,11 +1,11 @@
-{% trans_default_domain('avito-products.admin') %}
+{% trans_default_domain('yandex-market-products.admin') %}
 
 <main class="main d-print-none ">
 
     <section class="container px-4 mb-5">
 
         <div class="mt-3 d-flex justify-content-between">
-            {{ include(_self|replace({ "content.html.twig": "_breadcrumb.html.twig" })) }}
+            {{ include(_self|replace({ "content.html.twig": "breadcrumb.html.twig" })) }}
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-3">
@@ -30,9 +30,9 @@
 
                     {% include Template('@products-product/filter/'~baks_settings.device~'/filter.html.twig') %}
 
-                    {{ form_start(avito) }}
-                    {{ form_widget(avito.exists, { attr: { style: 'width: 100px;' } }) }}
-                    {{ form_end(avito) }}
+                    {{ form_start(yandexMarket) }}
+                    {{ form_widget(yandexMarket.exists, { attr: { style: 'width: 100px;' } }) }}
+                    {{ form_end(yandexMarket) }}
 
                 </div>
 
@@ -49,7 +49,7 @@
                     <th>#</th>
                     <th class="text-center">Категория</th>
                     <th class="ps-5 align-middle w-100">Продукция</th>
-                    <th class="text-center text-nowrap">Фото для Авито</th>
+                    <th class="text-center text-nowrap">Фото для Яндекс Маркета</th>
                 </tr>
 
                 </thead>
