--- a/Resources/view/admin/products/index/template.html.twig
+++ b/Resources/view/admin/products/index/template.html.twig
@@ -1,6 +1,6 @@
-{% trans_default_domain('avito-products.admin') %}
+{% trans_default_domain('yandex-market-products.admin') %}
 
-{% set ROLE = 'ROLE_AVITO_PRODUCTS' %}
+{% set ROLE = 'ROLE_YA_MARKET_PRODUCTS' %}
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block title %}
@@ -25,6 +25,6 @@
 <script nonce='{{ csp_nonce() }}' async  data-src="/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}" class="lazy"></script>
 <script nonce='{{ csp_nonce() }}' async data-src='/assets/js/radio.input.min.js?v={{ version }}' class='lazy'></script>
 <script nonce='{{ csp_nonce() }}' async data-src="/assets/products_product/filter.min.js?v={{ version }}" class="lazy"></script>
-<script nonce='{{ csp_nonce() }}' async data-src="/assets/avito-products/filter.min.js?v={{ version }}" class="lazy"></script>
+<script nonce='{{ csp_nonce() }}' async data-src="/assets/yandex-market-products/filter.min.js?v={{ version }}" class="lazy"></script>
 <script nonce='{{ csp_nonce() }}' async  data-src="/assets/js/copy.min.js?v={{ version }}" class="lazy"></script>
 {% endblock %}
