--- a/Resources/view/admin/card/index/template.html.twig
+++ b/Resources/view/admin/card/index/template.html.twig
@@ -12,8 +12,8 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
-    <link data-href="/assets/css/print.min.css" rel="stylesheet" class="lazy" type="text/css">
+    <link href="/assets/{{ version }}/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link data-href="/assets/{{ version }}/css/print.min.css" rel="stylesheet" class="lazy" type="text/css">
 {% endblock %}
 
 
@@ -26,10 +26,10 @@
 
 {% block javascript %}
 
-<script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
             class='lazy'></script>
-    <script nonce='{{ csp_nonce() }}' async data-src="/assets/products_product/filter.min.js?v={{ version }}"
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/products-product/filter.min.js?v={{ version }}"
             class="lazy"></script>
-    <script nonce='{{ csp_nonce() }}' async data-src='/assets/js/radio.input.min.js?v={{ version }}'
+    <script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/js/radio.input.min.js?v={{ version }}'
             class='lazy'></script>
 {% endblock %}
