--- a/Resources/view/admin/custom/edit/pc/_header.html.twig
+++ b/Resources/view/admin/custom/edit/pc/_header.html.twig
@@ -6,7 +6,7 @@
 
         {# Обложка  #}
         <div>
-            {% set image_path = '/assets/img/blank.svg' %}
+            {% set image_path = '/assets/'~version~'/img/blank.svg' %}
 
             {% if product.product_image_ext is defined and product.product_image_ext is not null %}
                 {% set img_host =  product.product_image_cdn == true  ? CDN_HOST : '' %}
