--- a/Resources/view/admin/custom/edit/pc/_images.html.twig
+++ b/Resources/view/admin/custom/edit/pc/_images.html.twig
@@ -19,7 +19,7 @@
                 <div class="item-collection-photo">
 
                     {# Обложка #}
-                    {% set image_path = '/assets/img/blank.svg' %}
+                    {% set image_path = '/assets/'~version~'/img/blank.svg' %}
 
                     {% if image.vars.data.ext is defined and image.vars.data.ext is not null %}
 
