--- a/Resources/view/admin/custom/edit/pc/_prototype.image.html.twig
+++ b/Resources/view/admin/custom/edit/pc/_prototype.image.html.twig
@@ -1,7 +1,7 @@
 {% trans_default_domain 'avito-products.admin' %}
 
 <label class="icon rounded-1 bg-contain position-relative image-input"
-       style='width: 150px; height: 200px;  background-image: url("/assets/img/blank.svg");"'
+       style='width: 150px; height: 200px;  background-image: url("/assets/{{ version }}/img/blank.svg");"'
 >
 
     <div class="position-absolute top-0 start-100 rounded-circle border p-2 ms-1 d-flex align-items-center justify-content-center"
