--- a/Resources/view/admin/settings/newedit/edit/template.html.twig
+++ b/Resources/view/admin/settings/newedit/edit/template.html.twig
@@ -11,7 +11,7 @@
 
 {# ---- CSS ------------------------------------------------------------ #}
 {% block stylesheets %}
-    <link href="/assets/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
+    <link href="/assets/{{ version }}/plugins/nice-select2/nice-select2.min.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -23,13 +23,13 @@
 
 {% block javascript %}
 
-<script nonce='{{ csp_nonce() }}' async data-src='/assets/js/image.input.min.js?v={{ version }}'
+<script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/js/image.input.min.js?v={{ version }}'
             class='lazy'></script>
-    <script nonce='{{ csp_nonce() }}' async data-src="/assets/js/radio.input.min.js?v={{ version }}"
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/js/radio.input.min.js?v={{ version }}"
             class="lazy"></script>
-    <script nonce='{{ csp_nonce() }}' async data-src='/assets/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
+    <script nonce='{{ csp_nonce() }}' async data-src='/assets/{{ version }}/plugins/nice-select2/nice-select2.min.js?v={{ version }}'
             class='lazy'></script>
-    <script nonce='{{ csp_nonce() }}' async data-src="/assets/payment/payment.min.js?v={{ version }}"
+    <script nonce='{{ csp_nonce() }}' async data-src="/assets/{{ version }}/payment/payment.min.js?v={{ version }}"
             class='lazy'></script>
 
 {% endblock %}
