Правит блок с подсказкой для перетягивания изображений

--- a/Resources/view/admin/custom/edit/pc/images.html.twig
+++ b/Resources/view/admin/custom/edit/pc/images.html.twig
@@ -12,21 +12,12 @@
     {# Изображения #}
     <div class="card-body">
 
-        <div class="alert alert-info mb-3 w-100" role="alert">
-            <div class="d-flex align-items-baseline gap-3">
-                <div>
-                    <div class="icon rounded-circle bg-contain p-2 bg-primary text-white"
-                         style="width: 10px; height: 10px;">
-                        <span class="small">!</span>
-                    </div>
-                </div>
-                <div class="small lh-1">
-                    <div class="info">Перетяните одно или несколько изображений в область ниже</div>
-                </div>
-            </div>
-        </div>
+        <div id="photo_collection" class="d-flex gap-5 flex-wrap border p-3 border-1 border-light bg-light"
+             style="min-height: 290px;">
 
-        <div id="photo_collection" class="d-flex gap-5 flex-wrap border p-1 border-1" style="min-height: 150px;">
+            <div class="h5 opacity-25 text-secondary lh-1 position-absolute top-50 start-50 translate-middle">
+                <div class="info w-100 text-center">Перетяните одно или несколько изображений в эту область</div>
+            </div>
 
             {% set images = form.images %}
 
